# rs808lv2

./: .gitignore  Build and install.txt  CONTRIBUTING.md  Create the LV2 bundle.txt  README.md  file and folder structure.txt  improvements.txt  lv2info.txt  meson.build  prompt.txt
src/: meson.build  rs808_lv2.cpp  rs808_sc_dsp.cpp  rs808_sc_dsp.hpp  rs808_state.cpp  rs808_state.hpp  rs808_urid.cpp  rs808_urid.hpp
src/ui/: knob.cpp  knob.hpp  rs808_ui.cpp
ttl/: manifest.ttl  rs808.ttl  ui.ttl
